--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,216 @@
-/*
- * Estilos de tu proyecto
- */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+/*Estilos del header*/
+header {
+  background-color: #fff;
+  border-bottom: 1px solid #00000040;
+  font-weight: 900;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 1000;
+}
+
+.container {
+  position: relative;
+  margin: 0 5%;
+  /*outline: 1px solid black;*/
+  overflow: auto;
+  width: 90%;
+  text-align: center;
+}
+
+.left {
+  float: left;
+  display: inline-block;
+  padding-top: 15px;
+}
+
+.nav-bar {
+  float: left;
+  list-style: none;
+  padding-right: 20px;
+}
+
+.icon {
+  display: inline-block;
+}
+
+img {
+  height: 95px;
+  width: 230px;
+}
+
+.right {
+  float: right;
+  text-align: left;
+  padding-top: 33px;
+}
+
+.nav-extra {
+  float: left;
+  list-style: none;
+  padding-left: 20px;
+}
+
+.photo {
+  background-image: url(../assets/images/usuario.png);
+  background-size: cover;
+  width: 70px;
+  height: 70px;
+  border-radius: 50px;
+  border: 3px solid #FFC107;
+}
+
+.language {
+  background-color: #FFC107;
+  width: 80px;
+  border-radius: 19px;
+  color: #000;
+  text-align: center;
+  padding:10px 18px;
+}
+
+.language a {
+  color: #333333;
+  text-decoration: none;
+}
+
+.language a:hover {
+  color: #fff;
+}
+
+/*Estilos a sección de selectores*/
+.selections {
+  padding-top: 16px;
+  background-color: #FFC107;
+  border-bottom: 1px solid #00000040;
+  border-top: 1px solid #00000040;
+}
+
+.sedes {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  border: 2px solid #333333;
+  margin: 10px;
+  outline: none;
+  margin-left: 22px;
+  background-color: #333333;
+  color: white;
+}
+
+.generations {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  border: 2px solid #333333;
+  outline: none;
+  background-color: #333333;
+  color: white;
+}
+
+.label {
+  padding-top: 10px;
+}
+
+.label ul li {
+  display: inline;
+}
+button {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  margin-left: 19px;
+  font-weight: 600;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  padding: 5px 35px;
+  background-color: #333333;
+  color: white;
+  outline: none;
+}
+
+button:hover {
+ background: #F7F7F7;
+ color: #333333;
+ box-shadow: inset 0 0 0 3px #333333;
+ font-weight: 600;
+}
+
+/*Estilos al primera pestaña Visión general*/
+article {
+  background-color: #333333;
+  padding-top: 220px;
+}
+
+article section {
+  background-color: #fff;
+  outline: 1px solid #333333;
+  margin: 0 20px 20px;
+  padding-top: 20px;
+  overflow: auto;
+  text-align: center;
+  box-shadow: 5px 5px 5px #fff;
+}
+
+.enrollment {
+  display: inline-block;
+  float:left;
+}
+
+.achievement {
+  display: inline-block;
+}
+
+.nps {
+  display: inline-block;
+  float: right;
+}
+
+.tech-skills {
+}
+
+.life-skills {
+}
+
+.student-satisfacción {
+  display: inline-block;
+  float: left;
+}
+
+.teacher-rating {
+  display: inline-block;
+}
+
+.jedi-rating {
+  display: inline-block;
+  float: right;
+}
+
+#teachers {
+  text-align: center;
+}
+
+.box-t {
+  display: inline-block;
+  margin: 22px;
+  box-shadow: 0 0 1em gold;
+}
+
+#teachers figure img {
+  width: 200px;
+  height: 200px;
+}
+
+.box-t a{
+  color: white;
+  text-decoration: none;
+}
